Added ability to simulate promoter read-through Fixed bugs in multi simulation, simulated tandem case Added fixes for reverse-direction genes with readthrough, finalized notebook for needed figures/videos

--- a/sc_model.ipynb
+++ b/sc_model.ipynb
@@ -11,15 +11,25 @@
     "from matplotlib.collections import LineCollection\n",
     "import pandas as pd\n",
     "import holoviews as hv\n",
+    "import seaborn as sns\n",
+    "import gc\n",
     "hv.extension('bokeh')\n",
     "from holoviews.operation.datashader import datashade\n",
+    "import bokeh\n",
+    "import bokeh.plotting\n",
+    "import bokeh.palettes\n",
+    "import bokeh.models\n",
+    "import scipy\n",
     "\n",
     "from tqdm import tqdm\n",
     "\n",
     "import stochastic_sc_model as ssc_model\n",
     "\n",
     "# Ensure we don't hit floating point errors\n",
-    "np.seterr('raise')"
+    "np.seterr('raise')\n",
+    "np.seterr(under='ignore')\n",
+    "\n",
+    "colors20 = bokeh.palettes.d3['Category20'][20]"
    ]
   },
   {
@@ -125,6 +135,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "convergent['rfp_venus_stoich_ratio'] = convergent['RFP_promoter_strength'] / convergent['mVenus_promoter_strength']\n",
+    "convergent['total_promoter_strength'] = convergent['RFP_promoter_strength'] + convergent['mVenus_promoter_strength']\n",
     "ss_timepoint = convergent[abs((convergent['time'] - 11051)) < 1]"
    ]
   },
@@ -167,9 +179,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ss_mean = ss_timepoint.groupby(['RFP_promoter_strength', 'mVenus_promoter_strength']).mean()\n",
-    "ss_mean['rfp_venus_ratio'] = ss_mean['RFP_expression'] / ss_mean['mVenus_expression']\n",
-    "ss_mean['rfp_venus_fold_ratio'] = np.log10(ss_mean['rfp_venus_ratio'])"
+    "ss_mean = ss_timepoint.groupby(['mVenus_promoter_strength', 'RFP_promoter_strength']).mean()\n",
+    "ss_mean['rfp_venus_ratio'] = ss_mean['RFP_expression'] / ss_mean['mVenus_expression']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scatter = hv.Scatter(ss_mean.reset_index(), ('rfp_venus_stoich_ratio', 'Promoter strength ratio'),\n",
+    "                     [('rfp_venus_ratio', 'Expression ratio'), 'total_promoter_strength']).opts(\n",
+    "    color='total_promoter_strength', cmap='Viridis', colorbar=True,\n",
+    "    logx=True, logy=True, size=10) * hv.Curve([(0.1,0.1), (10,10)]).opts(color=colors20[2])\n",
+    "scatter = scatter.options(width=700, height=550)\n",
+    "bokeh.io.show(fix_plot_text(hv.render(scatter)))"
    ]
   },
   {
@@ -197,14 +222,238 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "no_readthrough_sim = ssc_model.SupercoilingSimulation(params, ((0, 0), (2000, 0)),[\n",
+    "    (500, 800, 1, ['reporter'])])\n",
+    "no_readthrough_sim.enable_topo_relaxation()\n",
+    "run = no_readthrough_sim.postprocess_run(no_readthrough_sim.simulate((0, 2000)))\n",
+    "ssc_model.gen_movie(run, [\n",
+    "    (500, 800, 1)], 30 * 60, 'no_readthrough', 'animation_output', True,\n",
+    "                   x_range_override=(500,1250))\n",
+    "\n",
+    "readthrough_sim = ssc_model.SupercoilingSimulation(params, ((0, 0), (2000, 0)),[\n",
+    "    (500, 800, 1, ['reporter'], lambda: np.random.exponential(200), False)])\n",
+    "readthrough_sim.enable_topo_relaxation()\n",
+    "run = readthrough_sim.postprocess_run(readthrough_sim.simulate((0, 2000)))\n",
+    "ssc_model.gen_movie(run, [\n",
+    "    (500, 800, 1)], 30 * 60, 'readthrough_time', 'animation_output', True,\n",
+    "                   x_range_override=(500,1250))\n",
+    "\n",
+    "readthrough_distance = ssc_model.SupercoilingSimulation(params, ((0, 0), (2000, 0)),[\n",
+    "    (500, 800, 1, ['reporter'], lambda: np.random.exponential(200), True)])\n",
+    "readthrough_distance.enable_topo_relaxation()\n",
+    "run = readthrough_distance.postprocess_run(readthrough_distance.simulate((0, 2000)))\n",
+    "ssc_model.gen_movie(run, [\n",
+    "    (500, 800, 1)], 30 * 60, 'readthrough_distance', 'animation_output', True,\n",
+    "                   x_range_override=(500,1250))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_barrier = 3000 # bp\n",
+    "rfp_cymr = 975 # bp\n",
+    "wpre = 589 # bp\n",
+    "polyA = 200 # bp\n",
+    "tandem_ubc_spacer = 1327 # bp\n",
+    "venus_rtta = 2915 # bp\n",
+    "\n",
+    "tandem_sim_args = (params, ((0, 0),\n",
+    "   ((to_barrier + rfp_cymr + tandem_ubc_spacer + venus_rtta + to_barrier) * .34, 0)),[\n",
+    "    # Complete readthrough on upstream gene, but low efficency\n",
+    "    (to_barrier * .34, (to_barrier + rfp_cymr + tandem_ubc_spacer + venus_rtta) * .34, .3,\n",
+    "     ['RFP', 'mVenus'], 200, False),\n",
+    "    # Downstream\n",
+    "    ((to_barrier + rfp_cymr + tandem_ubc_spacer) * .34, (to_barrier + rfp_cymr + tandem_ubc_spacer + venus_rtta) * .34,\n",
+    "     1, ['mVenus'], 200, False)])\n",
+    "tandem_sim = ssc_model.SupercoilingSimulation(*tandem_sim_args)\n",
+    "tandem_sim.enable_topo_relaxation()\n",
+    "\n",
+    "tandem_wpre_sim_args = (params, ((0, 0),\n",
+    "   ((to_barrier + rfp_cymr + wpre + tandem_ubc_spacer + venus_rtta + to_barrier) * .34, 0)),[\n",
+    "    # Complete readthrough, but lower efficency\n",
+    "    (to_barrier * .34, (to_barrier + rfp_cymr + wpre + tandem_ubc_spacer + venus_rtta) * .34,\n",
+    "    1, ['RFP', 'mVenus'], 200, False),\n",
+    "    # Downstream\n",
+    "    ((to_barrier + rfp_cymr + wpre + tandem_ubc_spacer) * .34,\n",
+    "     (to_barrier + rfp_cymr + wpre + tandem_ubc_spacer + venus_rtta) * .34,\n",
+    "     1, ['mVenus'], 200, False)])\n",
+    "tandem_wpre_sim = ssc_model.SupercoilingSimulation(*tandem_wpre_sim_args)\n",
+    "tandem_wpre_sim.enable_topo_relaxation()\n",
+    "\n",
+    "tandem_wpre_polyA_sim_args = (params, ((0, 0),\n",
+    "   ((to_barrier + rfp_cymr + wpre + polyA + tandem_ubc_spacer + venus_rtta + to_barrier) * .34, 0)),[\n",
+    "    # No readthrough\n",
+    "    (to_barrier * .34, (to_barrier + rfp_cymr + wpre + polyA) * .34, 1,\n",
+    "    ['RFP'], 200, False),\n",
+    "    # Downstream\n",
+    "    ((to_barrier + rfp_cymr + wpre + polyA + tandem_ubc_spacer) * .34,\n",
+    "     (to_barrier + rfp_cymr + wpre + polyA + tandem_ubc_spacer + venus_rtta) * .34,\n",
+    "     1, ['mVenus'], 200, False)])\n",
+    "tandem_wpre_polyA_sim = ssc_model.SupercoilingSimulation(*tandem_wpre_polyA_sim_args)\n",
+    "tandem_wpre_polyA_sim.enable_topo_relaxation()\n",
+    "\n",
+    "tandem_sims = [(tandem_sim,\n",
+    "                '-WPRE',\n",
+    "                [(to_barrier * .34, (to_barrier + rfp_cymr) * .34),\n",
+    "                 ((to_barrier + rfp_cymr + tandem_ubc_spacer) * .34,\n",
+    "                  (to_barrier + rfp_cymr + tandem_ubc_spacer + venus_rtta) * .34)]),\n",
+    "               (tandem_wpre_sim,\n",
+    "                '+WPRE',\n",
+    "                [(to_barrier * .34, (to_barrier + rfp_cymr) * .34),\n",
+    "                 ((to_barrier + rfp_cymr + wpre + tandem_ubc_spacer) * .34,\n",
+    "                  (to_barrier + rfp_cymr + wpre + tandem_ubc_spacer + venus_rtta) * .34)]),\n",
+    "               (tandem_wpre_polyA_sim,\n",
+    "                '+WPRE+polyA',\n",
+    "                [(to_barrier * .34, (to_barrier + rfp_cymr) * .34),\n",
+    "                 ((to_barrier + rfp_cymr + wpre + polyA + tandem_ubc_spacer) * .34,\n",
+    "                  (to_barrier + rfp_cymr + wpre + polyA +tandem_ubc_spacer + venus_rtta) * .34)])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for sim, name, genes in tandem_sims:\n",
+    "    single_result = sim.postprocess_run(sim.simulate((0, 12000)))\n",
+    "    print('Success on {}, writing movie'.format(name))\n",
+    "    ssc_model.gen_movie(single_result, genes, 60 * 60, 'tandem' + name, 'animation_output', True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wpre_sims.reset_index().to_feather('tandem_wpre.feather')\n",
+    "wpre_polyA_sims.reset_index().to_feather('tandem_wpre_polya.feather')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make mass dataframe\n",
+    "wpre_sims = ssc_model.bulk_simulation(*tandem_wpre_sim_args, ['RFP', 'mVenus'], (0, 10000, 1000), 10000)\n",
+    "wpre_polyA_sims = ssc_model.bulk_simulation(*tandem_wpre_polyA_sim_args, ['RFP', 'mVenus'], (0, 10000, 1000), 10000)\n",
+    "wpre_sims.reset_index().to_feather('tandem_wpre.feather')\n",
+    "wpre_polyA_sims.reset_index().to_feather('tandem_wpre_polya.feather')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def density_plot(df):\n",
+    "    plots = (hv.Bivariate(df, ['RFP_expression', 'mVenus_expression']))\n",
+    "    return plots\n",
+    "\n",
+    "def ci_plot(df, fig, colors, legend):\n",
+    "    \"\"\"\n",
+    "    Plots onto a Bokeh plot.\n",
+    "    \"\"\"\n",
+    "    bestfit = scipy.stats.linregress(df['RFP_expression'], df['mVenus_expression'])\n",
+    "    \n",
+    "    fig.scatter('RFP_expression', 'mVenus_expression', source=df, color=colors[0], legend_label=legend,\n",
+    "                 radius=.07)\n",
+    "    fig.line([0, 10], [bestfit.intercept, bestfit.intercept + bestfit.slope * 10], \n",
+    "             color=colors[1], legend_label=legend + ' linear fit')\n",
+    "    num_bootstraps = 1000\n",
+    "    linfits = [()] * num_bootstraps\n",
+    "    num_points = df.shape[0]\n",
+    "    for i in range(num_bootstraps):\n",
+    "        bootstrap_resample = np.random.choice(range(num_points), num_points)\n",
+    "        bootstrap_view = df.iloc[list(bootstrap_resample)]\n",
+    "        result = scipy.stats.linregress(bootstrap_view['RFP_expression'], bootstrap_view['mVenus_expression'])\n",
+    "        linfits[i] = (result.slope, result.intercept)\n",
+    "    sample_x = np.linspace(0, 10, 200)\n",
+    "    n_points = sample_x.shape[0]\n",
+    "    n_fits = len(linfits)\n",
+    "    confint = .99\n",
+    "    ci = np.zeros((2, n_points))\n",
+    "    for idx, x_i in enumerate(sample_x):\n",
+    "        values = sorted([l[1] + x_i * l[0] for l in linfits])\n",
+    "        ci[:,idx] = [values[np.floor(n_fits * (1 - confint) / 2).astype(int)],\n",
+    "                         values[np.floor(n_fits * (1 + confint) / 2).astype(int)]]\n",
+    "    fig.varea(sample_x, ci[0,:], ci[1,:], color=colors[2], alpha=.6, legend_label=legend + ' linear fit')\n",
+    "    fig = bokeh.plotting.figure(width=400, height=400, x_axis_label = 'RFP expression',\n",
+    "                                y_axis_label = 'mVenus expression', x_range = [])\n",
+    "def fix_plot_text(plot):\n",
+    "    plot.title.text_font='Arial'\n",
+    "    plot.xaxis.axis_label_text_font_style='normal'\n",
+    "    plot.xaxis.axis_label_text_font='Arial'\n",
+    "    plot.yaxis.axis_label_text_font_style='normal'\n",
+    "    plot.yaxis.axis_label_text_font='Arial'\n",
+    "    plot.xaxis.axis_label_text_font_size='12pt'\n",
+    "    plot.xaxis.major_label_text_font_size='10pt'\n",
+    "    plot.yaxis.axis_label_text_font_size='12pt'\n",
+    "    plot.yaxis.major_label_text_font_size='10pt'\n",
+    "    if len(plot.legend) != 0:\n",
+    "        plot.legend.label_text_font_size='12pt'\n",
+    "        plot.legend.label_text_font='Arial'\n",
+    "        plot.legend.click_policy = 'hide'\n",
+    "    return plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = bokeh.plotting.figure(width=400, height=400, x_axis_label = 'RFP expression',\n",
+    "                                y_axis_label = 'mVenus expression', x_range = [0, 10], y_range = [0, 10])\n",
+    "ci_plot(wpre_sims[wpre_sims['time']==10000.0], fig, [colors20[0], colors20[0], colors20[1]], '+WPRE')\n",
+    "ci_plot(wpre_polyA_sims[wpre_polyA_sims['time']==10000.0], fig, [colors20[16], colors20[16], colors20[17]],\n",
+    "        '+WPRE, +polyA')\n",
+    "fig.legend.location = 'bottom_right'\n",
+    "bokeh.io.show(fix_plot_text(fig))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "density = hv.render(density_plot(wpre_sims[wpre_sims['time']==10000.0]))\n",
+    "density.x_range = bokeh.models.Range1d(0, 7)\n",
+    "bokeh.io.show(fix_plot_text(density))\n",
+    "density = hv.render(density_plot(wpre_polyA_sims[wpre_polyA_sims['time']==10000.0]))\n",
+    "bokeh.io.show(fix_plot_text(density))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "RFP_start = 3000 * .34;\n",
     "RFP_end = RFP_start + (975 + 589 + 200) * .34\n",
     "mVenus_end = RFP_end + (589 * .34)\n",
-    "mVenus_start = mVenus_end + (2161 * .34)\n",
-    "end_barrier = mVenus_end + (3000 * .34)\n",
+    "mVenus_start = mVenus_end + (2915 * .34)\n",
+    "end_barrier = mVenus_end + (3000 * .34)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sim = ssc_model.SupercoilingSimulation(params, ((0,0), (end_barrier, 0)),[\n",
-    "                            (RFP_start, RFP_end, 1),\n",
-    "                            (mVenus_start, mVenus_end, 1)])\n",
+    "                            (RFP_start, RFP_end, .3),\n",
+    "                            (mVenus_start, mVenus_end, .3)])\n",
     "\n",
     "sim.enable_topo_relaxation()\n",
     "single_result = sim.postprocess_run(sim.simulate((0, 12000)))\n",
@@ -229,7 +478,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datashade(hv.Points(convergent, ['time', 'RFP_expression'])) * hv.Curve(ss_mean, ['time', 'RFP_expression'])"
+    "sim = ssc_model.SupercoilingSimulation(params, ((0,0), (end_barrier, 0)),[\n",
+    "                            (RFP_start, RFP_end, 0.3, ['RFP'], 1000, False),\n",
+    "                            (mVenus_start, mVenus_end, 0.3, ['mVenus'], 1000, False)])\n",
+    "\n",
+    "sim.enable_topo_relaxation()\n",
+    "single_result = sim.postprocess_run(sim.simulate((0, 40000)))\n",
+    "print('Writing movie')\n",
+    "ssc_model.gen_movie(single_result, [\n",
+    "    (RFP_start, RFP_end, 1),\n",
+    "    (mVenus_start, mVenus_end, 1)], 60 * 60, 'convergent_readthrough', 'animation_output', True)"
    ]
   },
   {
@@ -238,11 +496,106 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(np.linspace(0,.05,100),sim.model.polymerase_velocity(np.zeros((100,)), np.linspace(0,.05,100)))\n",
+    "convergent_readthrough['rel_expression'] = convergent_readthrough['RFP_expression'] - convergent_readthrough['mVenus_expression']\n",
+    "convergent_no_readthrough['rel_expression'] = convergent_no_readthrough['RFP_expression'] - convergent_no_readthrough['mVenus_expression']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convergent_args = (params, ((0,0), (end_barrier, 0)),[\n",
+    "                            (RFP_start, RFP_end, .3, ['RFP'], 1000, False),\n",
+    "                            (mVenus_start, mVenus_end, .3, ['mVenus'], 1000, False)])\n",
+    "convergent_readthrough = ssc_model.bulk_simulation(*convergent_args, ['RFP', 'mVenus'], (0, 10000, 1000), 10000)\n",
+    "convergent_readthrough.reset_index().to_feather('convergent_readthrough_10000.feather')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convergent_no_readthrough_args = (params, ((0,0), (end_barrier, 0)),[\n",
+    "                            (RFP_start, RFP_end, .3, ['RFP']),\n",
+    "                            (mVenus_start, mVenus_end, .3, ['mVenus'])])\n",
+    "convergent_no_readthrough = ssc_model.bulk_simulation(*convergent_no_readthrough_args, ['RFP', 'mVenus'], (0, 10000, 1000), 10000)\n",
+    "convergent_no_readthrough.reset_index().to_feather('convergent_no_readthrough_10000.feather')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.set(color_codes=True)\n",
+    "sns.distplot(convergent_readthrough[convergent_readthrough['time']==10000.0]['rel_expression'], hist=False,\n",
+    "             label='Readthrough')\n",
+    "sns.distplot(convergent_no_readthrough[convergent_no_readthrough['time']==10000.0]['rel_expression'], hist=False,\n",
+    "             label='No readthrough')\n",
+    "plt.xlabel('Relative expression')\n",
+    "plt.ylabel('Probability density')\n",
+    "plt.legend()\n",
+    "plt.savefig('convergent_readthrough.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.scatterplot(x=\"RFP_expression\", y=\"mVenus_expression\",\n",
+    "                data=convergent_readthrough[convergent_readthrough['time']==10000.0],\n",
+    "                alpha=.5, label='Readthrough')\n",
+    "sns.scatterplot(x=\"RFP_expression\", y=\"mVenus_expression\",\n",
+    "              data=convergent_no_readthrough[convergent_no_readthrough['time']==10000.0],\n",
+    "                alpha=.5, label='No readthrough')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(hv.Distribution(convergent_no_readthrough[convergent_no_readthrough['time']==10000.0], 'rel_expression') *\n",
+    " hv.Distribution(convergent_readthrough[convergent_readthrough['time']==10000.0], 'rel_expression'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sim = ssc_model.SupercoilingSimulation(params, ((0,0), (15000, 0)),[\n",
+    "                            (100, 200, 1)])\n",
+    "plt.plot(np.linspace(0,20,100), 1 / (1 + np.exp((np.linspace(0,20,100) - 12)/.4)), linewidth=3)\n",
+    "plt.plot(np.linspace(0,20,100), 1 / (1 + (np.linspace(0,20,100)/12)**27), '--',linewidth=3)\n",
+    "plt.legend(('Exponential', 'Hill coefficent'), prop={'size':13})\n",
+    "plt.gca().tick_params(axis = 'both', which = 'major', labelsize = 13)\n",
+    "plt.savefig('response_funcs.svg')\n",
     "plt.show()\n",
-    "plt.plot(np.linspace(0,20,100), 1 / (1 + np.exp((np.linspace(0,20,100) - 12)/.1)))\n",
+    "plt.plot(np.linspace(0,.1,100),sim.model.polymerase_velocity(np.zeros((100,)), np.linspace(0,.1,100)), linewidth=3)\n",
+    "plt.xlabel('Supercoiling density (unitless)', fontsize=15)\n",
+    "plt.ylabel('Polymerase velocity (nm/s)',fontsize=15)\n",
+    "plt.gca().tick_params(axis = 'both', which = 'major', labelsize = 13)\n",
+    "plt.savefig('polymerase_velocity.svg')\n",
     "plt.show()\n",
-    "plt.plot(np.linspace(0,.1,100), sim.model.torque_response(np.linspace(0,.1,100)))"
+    "plt.fill_between([.023, .0765], sim.model.torque_response(np.array([.023, .0765])), alpha=.1, color='k')\n",
+    "plt.plot(np.linspace(0,.1,100), sim.model.torque_response(np.linspace(0,.1,100)), linewidth=3)\n",
+    "plt.xlabel('Supercoiling density (unitless)', fontsize=15)\n",
+    "plt.ylabel('Torque (pN nm)', fontsize=15)\n",
+    "plt.gca().tick_params(axis = 'both', which = 'major', labelsize = 13)\n",
+    "plt.savefig('torque.svg')\n",
+    "plt.show()"
    ]
   },
   {
