--- a/sc_model.ipynb
+++ b/sc_model.ipynb
@@ -608,9 +608,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.4 64-bit ('env': venv)",
    "language": "python",
-   "name": "python3"
+   "name": "python_defaultSpec_1597352947114"
   },
   "language_info": {
    "codemirror_mode": {
@@ -622,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
