--- a/notebooks/coupling_sc_dependence.ipynb
+++ b/notebooks/coupling_sc_dependence.ipynb
@@ -10,12 +10,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.7.4"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1599250433747",
-   "display_name": "Python 3.7.4 64-bit ('env': venv)"
+   "name": "python374jvsc74a57bd0633f1c1c8320b313f5f886b41bd1fdc446650904a8aae9c7ea4880a02892af16",
+   "display_name": "Python 3.7.4 64-bit ('env': venv)",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -48,6 +49,17 @@
       "text/html": ""
      },
      "metadata": {}
+    },
+    {
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'stochastic_sc_model'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-4a6daf4b340e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mhvplot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpandas\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mstochastic_sc_model\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mssc_model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;31m# Ensure we don't hit floating point errors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'stochastic_sc_model'"
+     ]
     }
    ],
    "source": [
