--- a/notebooks/plot_julia_example.ipynb
+++ b/notebooks/plot_julia_example.ipynb
@@ -6,13 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib import animation\n",
-    "from matplotlib.collections import LineCollection\n",
-    "import numpy as np\n",
-    "import h5py\n",
-    "\n",
-    "plt.rcParams['animation.ffmpeg_path'] = r'C:\\Users\\ChemeGrad2019\\Downloads\\ffmpeg-2020-12-09-git-7777e5119a-full_build\\bin\\ffmpeg.exe'\n",
+    "import matplotlib.pyplot as plt\r\n",
+    "from matplotlib import animation\r\n",
+    "from matplotlib.collections import LineCollection\r\n",
+    "import numpy as np\r\n",
+    "import h5py\r\n",
+    "\r\n",
+    "plt.rcParams['animation.ffmpeg_path'] = r'C:\\Users\\Christopher\\Downloads\\ffmpeg-n4.4-6-g7e9b9f24df-win64-gpl-4.4\\ffmpeg-n4.4-6-g7e9b9f24df-win64-gpl-4.4\\bin\\ffmpeg.exe'\r\n",
+    "plt.rcParams['font.family'] = 'sans-serif'\r\n",
+    "plt.rcParams['font.sans-serif'] = 'Helvetica Neue'\r\n",
+    "#sns.set_context('talk',rc={'font.family': 'sans-serif', 'font.sans-serif':['Helvetica Neue']})\r\n",
     "ffmpeg_writer = animation.FFMpegWriter(fps=30, codec='libx265', extra_args=['-crf', '18'])"
    ]
   },
@@ -47,11 +50,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "examples=f['tangles_full_run.001151']\n",
-    "print(examples.attrs['comment'])\n",
-    "print(examples.attrs['rates.topo'])\n",
-    "print(examples.attrs['gene.base_rate'])\n",
-    "print(examples['time'].shape)"
+    "examples=f['tangles_full_run.001841']\r\n",
+    "print(examples.keys())\r\n",
+    "print(examples.attrs.keys())\r\n",
+    "print(examples.attrs['comment'])\r\n",
+    "print(examples.attrs['rates.topo'])\r\n",
+    "print(examples.attrs['gene.base_rate'])\r\n",
+    "print(examples['time'].shape)\r\n",
+    "print(examples.attrs['rates.sc_dependent'])\r\n",
+    "print(examples.attrs['bcs.is_circular'])"
    ]
   },
   {
@@ -60,64 +67,174 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gen_animation(data_group, gene_colors, filename, is_circular):\n",
-    "    fig, ax = plt.subplots(figsize=(1920 / 300,1080 / 300))\n",
-    "\n",
-    "    genes = list(zip(data_group.attrs['gene.start'], data_group.attrs['gene.end']))\n",
-    "\n",
-    "\n",
-    "    max_length = data_group.attrs['bcs.length']\n",
-    "    ax.set_xlim([0,max_length])\n",
-    "    ax.set_ylim([-100, 100 + max([abs(gene[1] - gene[0]) for gene in genes])])\n",
-    "\n",
-    "    polymerases = ax.plot([], [], 'ko')[0]\n",
-    "\n",
-    "    gene_plots = [ax.plot(gene, [0, 0], 'k',linewidth=14, zorder=0)[0] for gene in genes]\n",
-    "\n",
-    "    main_line = LineCollection([], cmap=plt.cm.coolwarm, norm=plt.Normalize(-.2,.2))\n",
-    "    mRNA_lines = LineCollection([], colors='k')\n",
-    "\n",
-    "    def init():\n",
-    "        main_line.set_segments([])\n",
-    "        main_line.set_linewidth(8)\n",
-    "        mRNA_lines.set_linewidth(3)\n",
-    "        ax.add_collection(main_line)\n",
-    "        ax.add_collection(mRNA_lines)\n",
-    "        return (*gene_plots, main_line, mRNA_lines)\n",
-    "    \n",
-    "    def animate(i):\n",
-    "        n_polymerases = np.sum(data_group['rnap_location'][:,i] >= 0)\n",
-    "        rnap_locs = np.concatenate((\n",
-    "            np.zeros(1,),\n",
-    "            data_group['rnap_location'][:n_polymerases,i],\n",
-    "            np.ones(1,) * max_length\n",
-    "        ))\n",
-    "        rnap_masked = np.ma.masked_array(rnap_locs[1:-1], mask=rnap_locs[1:-1] < 0)\n",
-    "        phi = np.concatenate((\n",
-    "            np.zeros(1,),\n",
-    "            data_group['phi'][:n_polymerases,i],\n",
-    "            np.zeros(1,)\n",
-    "        ))\n",
-    "        sigma = np.diff(phi) / np.diff(rnap_locs) / -1.85\n",
-    "        points = np.array([rnap_locs, np.zeros(rnap_locs.shape)]).T.reshape(-1,1,2)\n",
-    "        segments = np.concatenate([points[:-1], points[1:]], axis=1)\n",
-    "        main_line.set_segments(segments)\n",
-    "        main_line.set_array(sigma)\n",
-    "\n",
-    "        polymerases.set_data(rnap_masked, np.zeros(rnap_masked.shape))\n",
-    "\n",
-    "        mRNA_base = np.array([rnap_locs[1:  -1], np.zeros(rnap_locs[1:-1].shape)]).T.reshape(-1,1,2)\n",
-    "        mRNA_tail = np.array([rnap_locs[1:-1], data_group['mRNA_length'][:n_polymerases,i]]).T.reshape(-1,1,2)\n",
-    "        #print(mRNA_base)\n",
-    "        #print(mRNA_tail)\n",
-    "        mRNA_segments = np.concatenate([mRNA_base, mRNA_tail], axis=1)\n",
-    "        mRNA_lines.set_segments(mRNA_segments)\n",
-    "\n",
-    "\n",
-    "        return main_line, polymerases, mRNA_lines\n",
-    "    anim = animation.FuncAnimation(fig, animate, init_func=init, frames=2000, interval=33, blit=True)\n",
-    "    anim.save(filename, dpi=300, writer=ffmpeg_writer)\n",
-    "gen_animation(examples, [], '../output/test_out.mp4', False)"
+    "def interpolate(data_group, time):\r\n",
+    "    \"\"\"\r\n",
+    "    Taking a HDF5 group and a time to interpolate at, returns a tuple representing an\r\n",
+    "    interpolated state. mRNA state is interpolated \"from left\" (e.g. constant), whereas\r\n",
+    "    other variables are linearly interpolated. If the two nearest points differ in # of\r\n",
+    "    polymerases, the \"left\" state is used without modification.\r\n",
+    "    \"\"\"\r\n",
+    "    idx = 0\r\n",
+    "    total_points = len(data_group['time'])\r\n",
+    "    times = np.array(data_group['time'][:])\r\n",
+    "    while times[idx] < time and idx < total_points:\r\n",
+    "        idx = idx + 1\r\n",
+    "    if idx == total_points:\r\n",
+    "        return {\"rnap_location\": [], 'phi': [], 'mRNA_length': [], 'mRNA': []}\r\n",
+    "    \r\n",
+    "    if idx == total_points - 1:\r\n",
+    "        # Just return the last point\r\n",
+    "        return {k:data_group[k][:,idx] for k in ['rnap_location', 'phi', 'mRNA_length', 'mRNA']}\r\n",
+    "\r\n",
+    "    # Calc number of polymerases at timepoint i and i + 1\r\n",
+    "    prev_n_rnap = sum(data_group['rnap_location'][:,idx] != -1.0)\r\n",
+    "    next_n_rnap = sum(data_group['rnap_location'][:,idx + 1] != -1.0)\r\n",
+    "\r\n",
+    "    if prev_n_rnap != next_n_rnap or data_group['time'][idx+1] - data_group['time'][idx] < .001:\r\n",
+    "        # Just return the last point\r\n",
+    "        return {k:data_group[k][:,idx] for k in ['rnap_location', 'phi', 'mRNA_length', 'mRNA']}\r\n",
+    "\r\n",
+    "    # Otherwise, now interpolate everything except the mRNA values\r\n",
+    "    alpha = (data_group['time'][idx + 1] - time) / (data_group['time'][idx + 1] - data_group['time'][idx])\r\n",
+    "    return {\r\n",
+    "        'rnap_location': (data_group['rnap_location'][:,idx + 1] * alpha) + (data_group['rnap_location'][:,idx] * (1 - alpha)),\r\n",
+    "        'phi': (data_group['phi'][:,idx + 1] * alpha) + (data_group['phi'][:,idx] * (1 - alpha)),\r\n",
+    "        'mRNA_length': (data_group['mRNA_length'][:,idx + 1] * alpha) + (data_group['mRNA_length'][:,idx] * (1 - alpha)),\r\n",
+    "        'mRNA': data_group['mRNA'][:,idx]\r\n",
+    "    }\r\n",
+    "\r\n",
+    "def gen_animation(data_group, gene_colors, filename, n_frames):\r\n",
+    "    is_circular = data_group.attrs['bcs.is_circular'] == 1.0\r\n",
+    "\r\n",
+    "    fig = plt.figure(figsize=(1920 / 300,1000 / 300))\r\n",
+    "    ax1 = plt.subplot(1, 3, (1, 2), polar=True) if is_circular else plt.subplot(1, 3, (1,2))\r\n",
+    "    ax2 = plt.subplot(1, 3, 3)\r\n",
+    "    #fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(1920 / 300,1080 / 300))\r\n",
+    "\r\n",
+    "    genes = list(zip(data_group.attrs['gene.start'], data_group.attrs['gene.end']))\r\n",
+    "\r\n",
+    "\r\n",
+    "    times = np.array(data_group['time'])\r\n",
+    "    mRNA_data = np.array(data_group['mRNA'])\r\n",
+    "    max_time = max(data_group['time'])\r\n",
+    "    max_length = data_group.attrs['bcs.length']\r\n",
+    "    max_gene_length = max([abs(gene[1] - gene[0]) for gene in genes])\r\n",
+    "    to_theta = lambda x: np.pi / 2 -2*np.pi * x / max_length\r\n",
+    "    if not is_circular:\r\n",
+    "        ax1.set_xlim([0,max_length])\r\n",
+    "        ax1.set_ylim([-20, 100 + max_gene_length])\r\n",
+    "        ax1.spines['top'].set_visible(False)\r\n",
+    "        ax1.spines['right'].set_visible(False)\r\n",
+    "        ax1.spines['left'].set_visible(False)\r\n",
+    "        ax1.tick_params(left=False, labelleft=False)\r\n",
+    "        ax1.set_xlabel('Distance (nm)')\r\n",
+    "    else:\r\n",
+    "        ax1.tick_params(left=False, labelleft=False, bottom=False, labelbottom=False)\r\n",
+    "        ax1.set_rmax(3)\r\n",
+    "        ax1.grid(False)\r\n",
+    "        ax1.spines['polar'].set_visible(False)\r\n",
+    "\r\n",
+    "    ax2.set_xlim([0, max_time])\r\n",
+    "    ax2.set_ylim([0,np.max(data_group['mRNA'])])\r\n",
+    "    ax2.spines['top'].set_visible(False)\r\n",
+    "    ax2.spines['right'].set_visible(False)\r\n",
+    "    ax2.set_xlabel('Time (s)')\r\n",
+    "    ax2.set_ylabel('# mRNAs')\r\n",
+    "\r\n",
+    "    gene_lines = [ax2.plot([], [], color=color)[0] for gene, color in zip(genes, gene_colors)]\r\n",
+    "\r\n",
+    "    polymerases = ax1.plot([], [], 'ko')[0]\r\n",
+    "\r\n",
+    "    if not is_circular:\r\n",
+    "        gene_plots = [ax1.plot(gene, [0, 0], color=color,linewidth=14, zorder=0, solid_capstyle='butt')[0] for gene, color in zip(genes, gene_colors)]\r\n",
+    "    else:\r\n",
+    "        gene_plots = [ax1.plot(np.linspace(to_theta(gene[0]), to_theta(gene[1]), 50), np.linspace(1,1,50), linewidth=14, zorder=0, color=color, solid_capstyle='butt')[0] for gene, color in zip(genes, gene_colors)]\r\n",
+    "\r\n",
+    "    main_line = LineCollection([], cmap=plt.cm.coolwarm, norm=plt.Normalize(-.2,.2))\r\n",
+    "    mRNA_lines = LineCollection([], colors='k')\r\n",
+    "\r\n",
+    "    def init():\r\n",
+    "        main_line.set_segments([])\r\n",
+    "        if is_circular:\r\n",
+    "            main_line.set_linewidth(4)\r\n",
+    "        else:\r\n",
+    "            main_line.set_linewidth(8)\r\n",
+    "        mRNA_lines.set_linewidth(3)\r\n",
+    "        ax1.add_collection(main_line)\r\n",
+    "        ax1.add_collection(mRNA_lines)\r\n",
+    "        return (*gene_plots, main_line, mRNA_lines)\r\n",
+    "    \r\n",
+    "    def animate(i):\r\n",
+    "        frame_vals = interpolate(data_group, max_time * i / n_frames)\r\n",
+    "        n_polymerases = np.sum(frame_vals['rnap_location'] >= 0)\r\n",
+    "        if not is_circular:\r\n",
+    "            rnap_locs = np.concatenate((\r\n",
+    "                np.zeros(1,),\r\n",
+    "                frame_vals['rnap_location'][:n_polymerases],\r\n",
+    "                np.ones(1,) * max_length\r\n",
+    "            ))\r\n",
+    "        else:\r\n",
+    "            rnap_locs = np.concatenate((\r\n",
+    "                np.ones(1,) * (frame_vals['rnap_location'][n_polymerases - 1] - max_length),\r\n",
+    "                frame_vals['rnap_location'][:n_polymerases],\r\n",
+    "                np.ones(1,) * (max_length + frame_vals['rnap_location'][0])\r\n",
+    "            ))\r\n",
+    "\r\n",
+    "        rnap_masked = np.ma.masked_array(rnap_locs[1:-1], mask=rnap_locs[1:-1] < 0)\r\n",
+    "        if not is_circular:\r\n",
+    "            phi = np.concatenate((\r\n",
+    "                np.zeros(1,),\r\n",
+    "                frame_vals['phi'][:n_polymerases],\r\n",
+    "                np.zeros(1,)\r\n",
+    "            ))\r\n",
+    "        else:\r\n",
+    "            if n_polymerases == 0:\r\n",
+    "                phi = np.zeros(2,)\r\n",
+    "            else:\r\n",
+    "                phi = np.concatenate((\r\n",
+    "                    np.ones(1,) * frame_vals['phi'][n_polymerases - 1],\r\n",
+    "                    frame_vals['phi'][:n_polymerases],\r\n",
+    "                    np.ones(1,) * frame_vals['phi'][0]\r\n",
+    "                ))\r\n",
+    "        sigma = np.diff(phi) / np.diff(rnap_locs) / -1.85\r\n",
+    "        if not is_circular:\r\n",
+    "            points = np.array([rnap_locs, np.zeros(rnap_locs.shape)]).T.reshape(-1,1,2)\r\n",
+    "            segments = np.concatenate([points[:-1], points[1:]], axis=1)\r\n",
+    "            main_line.set_segments(segments)\r\n",
+    "            main_line.set_array(sigma)\r\n",
+    "        else:\r\n",
+    "            theta_rnap = to_theta(rnap_locs)\r\n",
+    "            theta_interp = np.linspace(0, max_length, 200)\r\n",
+    "            sigma_interp = np.interp(theta_interp, theta_rnap[:-1], sigma)\r\n",
+    "            points = np.array([theta_interp, np.ones(theta_interp.shape) * 1]).T.reshape(-1,1,2)\r\n",
+    "            segments = np.concatenate([points[:-1], points[1:]], axis=1)\r\n",
+    "            main_line.set_segments(segments)\r\n",
+    "            main_line.set_array(sigma_interp)\r\n",
+    "\r\n",
+    "        if is_circular:\r\n",
+    "            polymerases.set_data(to_theta(rnap_masked), np.ones(rnap_masked.shape))\r\n",
+    "        else:\r\n",
+    "            polymerases.set_data(rnap_masked, np.zeros(rnap_masked.shape))\r\n",
+    "\r\n",
+    "        if not is_circular:\r\n",
+    "            mRNA_base = np.array([rnap_locs[1:  -1], np.zeros(rnap_locs[1:-1].shape)]).T.reshape(-1,1,2)\r\n",
+    "            mRNA_tail = np.array([rnap_locs[1:-1], frame_vals['mRNA_length'][:n_polymerases]]).T.reshape(-1,1,2)\r\n",
+    "        else:\r\n",
+    "            mRNA_base = np.array([to_theta(rnap_locs[1: -1]), np.ones(rnap_locs[1:-1].shape)]).T.reshape(-1,1,2)\r\n",
+    "            mRNA_tail = np.array([to_theta(rnap_locs[1:-1]), 1 + (frame_vals['mRNA_length'][:n_polymerases] / max_gene_length)]).T.reshape(-1,1,2)\r\n",
+    "        #print(mRNA_base)\r\n",
+    "        #print(mRNA_tail)\r\n",
+    "        mRNA_segments = np.concatenate([mRNA_base, mRNA_tail], axis=1)\r\n",
+    "        mRNA_lines.set_segments(mRNA_segments)\r\n",
+    "\r\n",
+    "        gene_time_mask = (times < (max_time * i / n_frames))\r\n",
+    "        for i, gene_line in enumerate(gene_lines):\r\n",
+    "            gene_line.set_data(times[gene_time_mask], mRNA_data[i,gene_time_mask])\r\n",
+    "            \r\n",
+    "        return main_line, polymerases, mRNA_lines, *gene_lines\r\n",
+    "    anim = animation.FuncAnimation(fig, animate, init_func=init, frames=n_frames, interval=33, blit=True)\r\n",
+    "    anim.save(filename, dpi=300, writer=ffmpeg_writer, progress_callback= lambda i,n: print(f'Saving frame {i} of {n}') if i % 25 == 0 else None)\r\n",
+    "gen_animation(examples, ['#808080', '#A58245'], '../output/test_out.mp4', 20000)"
    ]
   },
   {
@@ -190,9 +307,12 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "35596c0d4d50b3cf51088ffaabe9a8701552f7de3deccc6f17efae06fe0a22a4"
+  },
   "kernelspec": {
-   "display_name": "Python 3.7.4  ('env': venv)",
-   "name": "pythonjvsc74a57bd0633f1c1c8320b313f5f886b41bd1fdc446650904a8aae9c7ea4880a02892af16"
+   "display_name": "Python 3.9.4  ('env': venv)",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -204,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.4"
   },
   "metadata": {
    "interpreter": {
