--- a/notebooks/t2.0_flow_analysis.ipynb
+++ b/notebooks/t2.0_flow_analysis.ipynb
@@ -366,13 +366,6 @@
     "sns.kdeplot(x='log mRuby2-N', data=plot_df, hue='dox', palette='viridis')\r\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -384,16 +377,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": ""
   }
  },
  "nbformat": 4,
