Updated data generation notebooks
Updated linear plot to work correctly

--- a/notebooks/plot_julia_example.ipynb
+++ b/notebooks/plot_julia_example.ipynb
@@ -67,6 +67,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(examples['rnap_location'][:,150:200])\r\n",
+    "print(examples['time'][150:200])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def interpolate(data_group, time):\r\n",
     "    \"\"\"\r\n",
     "    Taking a HDF5 group and a time to interpolate at, returns a tuple representing an\r\n",
@@ -87,39 +97,39 @@
     "        return {k:data_group[k][:,idx] for k in ['rnap_location', 'phi', 'mRNA_length', 'mRNA']}\r\n",
     "\r\n",
     "    # Calc number of polymerases at timepoint i and i + 1\r\n",
-    "    prev_n_rnap = sum(data_group['rnap_location'][:,idx] != -1.0)\r\n",
-    "    next_n_rnap = sum(data_group['rnap_location'][:,idx + 1] != -1.0)\r\n",
+    "    prev_n_rnap = sum(data_group['rnap_location'][:,idx-1] < 0)\r\n",
+    "    next_n_rnap = sum(data_group['rnap_location'][:,idx] < 0)\r\n",
     "\r\n",
-    "    if prev_n_rnap != next_n_rnap or data_group['time'][idx+1] - data_group['time'][idx] < .001:\r\n",
+    "    if prev_n_rnap != next_n_rnap:\r\n",
     "        # Just return the last point\r\n",
-    "        return {k:data_group[k][:,idx] for k in ['rnap_location', 'phi', 'mRNA_length', 'mRNA']}\r\n",
+    "        return {k:data_group[k][:,idx-1] for k in ['rnap_location', 'phi', 'mRNA_length', 'mRNA']}\r\n",
     "\r\n",
     "    # Otherwise, now interpolate everything except the mRNA values\r\n",
-    "    alpha = (data_group['time'][idx + 1] - time) / (data_group['time'][idx + 1] - data_group['time'][idx])\r\n",
+    "    alpha = (data_group['time'][idx] - time) / (data_group['time'][idx] - data_group['time'][idx - 1])\r\n",
     "    return {\r\n",
-    "        'rnap_location': (data_group['rnap_location'][:,idx + 1] * alpha) + (data_group['rnap_location'][:,idx] * (1 - alpha)),\r\n",
-    "        'phi': (data_group['phi'][:,idx + 1] * alpha) + (data_group['phi'][:,idx] * (1 - alpha)),\r\n",
-    "        'mRNA_length': (data_group['mRNA_length'][:,idx + 1] * alpha) + (data_group['mRNA_length'][:,idx] * (1 - alpha)),\r\n",
-    "        'mRNA': data_group['mRNA'][:,idx]\r\n",
+    "        'rnap_location': (data_group['rnap_location'][:,idx-1] * alpha) + (data_group['rnap_location'][:,idx] * (1 - alpha)),\r\n",
+    "        'phi': (data_group['phi'][:,idx-1] * alpha) + (data_group['phi'][:,idx] * (1 - alpha)),\r\n",
+    "        'mRNA_length': (data_group['mRNA_length'][:,idx-1] * alpha) + (data_group['mRNA_length'][:,idx] * (1 - alpha)),\r\n",
+    "        'mRNA': data_group['mRNA'][:,idx-1]\r\n",
     "    }\r\n",
     "\r\n",
     "def gen_animation(data_group, gene_colors, filename, n_frames):\r\n",
     "    is_circular = data_group.attrs['bcs.is_circular'] == 1.0\r\n",
     "\r\n",
-    "    fig = plt.figure(figsize=(1920 / 300,1000 / 300))\r\n",
-    "    ax1 = plt.subplot(1, 3, (1, 2), polar=True) if is_circular else plt.subplot(1, 3, (1,2))\r\n",
-    "    ax2 = plt.subplot(1, 3, 3)\r\n",
-    "    #fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(1920 / 300,1080 / 300))\r\n",
-    "\r\n",
     "    genes = list(zip(data_group.attrs['gene.start'], data_group.attrs['gene.end']))\r\n",
-    "\r\n",
     "\r\n",
     "    times = np.array(data_group['time'])\r\n",
     "    mRNA_data = np.array(data_group['mRNA'])\r\n",
-    "    max_time = max(data_group['time'])\r\n",
+    "    #max_time = max(data_group['time'])\r\n",
+    "    max_time = 200\r\n",
     "    max_length = data_group.attrs['bcs.length']\r\n",
     "    max_gene_length = max([abs(gene[1] - gene[0]) for gene in genes])\r\n",
     "    to_theta = lambda x: np.pi / 2 -2*np.pi * x / max_length\r\n",
+    "\r\n",
+    "    fig = plt.figure(figsize=(1920 / 300,1000 / 300))\r\n",
+    "    ax1 = plt.subplot(1, 3, (1, 2), polar=True) if is_circular else plt.subplot(1, 3, (1,2))\r\n",
+    "    ax2 = plt.subplot(1, 3, 3)\r\n",
+    "\r\n",
     "    if not is_circular:\r\n",
     "        ax1.set_xlim([0,max_length])\r\n",
     "        ax1.set_ylim([-20, 100 + max_gene_length])\r\n",
@@ -142,13 +152,16 @@
     "    ax2.set_ylabel('# mRNAs')\r\n",
     "\r\n",
     "    gene_lines = [ax2.plot([], [], color=color)[0] for gene, color in zip(genes, gene_colors)]\r\n",
+    "    print(genes)\r\n",
     "\r\n",
     "    polymerases = ax1.plot([], [], 'ko')[0]\r\n",
     "\r\n",
-    "    if not is_circular:\r\n",
-    "        gene_plots = [ax1.plot(gene, [0, 0], color=color,linewidth=14, zorder=0, solid_capstyle='butt')[0] for gene, color in zip(genes, gene_colors)]\r\n",
-    "    else:\r\n",
+    "    if is_circular:\r\n",
+    "        ax1.plot(np.linspace(0, 2 * np.pi, 50), np.linspace(1,1,50), linewidth=14, zorder=0, color='0.8', solid_capstyle='butt')\r\n",
     "        gene_plots = [ax1.plot(np.linspace(to_theta(gene[0]), to_theta(gene[1]), 50), np.linspace(1,1,50), linewidth=14, zorder=0, color=color, solid_capstyle='butt')[0] for gene, color in zip(genes, gene_colors)]\r\n",
+    "    else:\r\n",
+    "        ax1.plot([0, max_length], [0, 0], color='0.8', linewidth=14, zorder=0, solid_capstyle='butt')\r\n",
+    "        gene_plots = [ax1.plot(gene, [0, 0], color=color,linewidth=14, zorder=0, solid_capstyle='butt')[0] for gene, color in zip(genes, gene_colors)]\r\n",
     "\r\n",
     "    main_line = LineCollection([], cmap=plt.cm.coolwarm, norm=plt.Normalize(-.2,.2))\r\n",
     "    mRNA_lines = LineCollection([], colors='k')\r\n",
@@ -167,74 +180,77 @@
     "    def animate(i):\r\n",
     "        frame_vals = interpolate(data_group, max_time * i / n_frames)\r\n",
     "        n_polymerases = np.sum(frame_vals['rnap_location'] >= 0)\r\n",
-    "        if not is_circular:\r\n",
-    "            rnap_locs = np.concatenate((\r\n",
-    "                np.zeros(1,),\r\n",
-    "                frame_vals['rnap_location'][:n_polymerases],\r\n",
-    "                np.ones(1,) * max_length\r\n",
-    "            ))\r\n",
-    "        else:\r\n",
-    "            rnap_locs = np.concatenate((\r\n",
-    "                np.ones(1,) * (frame_vals['rnap_location'][n_polymerases - 1] - max_length),\r\n",
-    "                frame_vals['rnap_location'][:n_polymerases],\r\n",
-    "                np.ones(1,) * (max_length + frame_vals['rnap_location'][0])\r\n",
-    "            ))\r\n",
     "\r\n",
-    "        rnap_masked = np.ma.masked_array(rnap_locs[1:-1], mask=rnap_locs[1:-1] < 0)\r\n",
-    "        if not is_circular:\r\n",
-    "            phi = np.concatenate((\r\n",
-    "                np.zeros(1,),\r\n",
-    "                frame_vals['phi'][:n_polymerases],\r\n",
-    "                np.zeros(1,)\r\n",
-    "            ))\r\n",
-    "        else:\r\n",
-    "            if n_polymerases == 0:\r\n",
-    "                phi = np.zeros(2,)\r\n",
-    "            else:\r\n",
+    "        # Plot mRNA data values\r\n",
+    "\r\n",
+    "        # Plot mRNA values (on the right-hand plot)\r\n",
+    "        gene_time_mask = (times < (max_time * i / n_frames))\r\n",
+    "        for i, gene_line in enumerate(gene_lines):\r\n",
+    "            gene_line.set_data(times[gene_time_mask], mRNA_data[i,gene_time_mask])\r\n",
+    "\r\n",
+    "        # Set visibility\r\n",
+    "        polymerases.set_visible(n_polymerases > 0)\r\n",
+    "        main_line.set_visible(n_polymerases > 0)\r\n",
+    "        mRNA_lines.set_visible(n_polymerases > 0)\r\n",
+    "\r\n",
+    "        # Plot polymerases and genes coming off polymerases.\r\n",
+    "        if n_polymerases > 0:\r\n",
+    "            if is_circular:\r\n",
+    "                # Simulate circular boundary conditions\r\n",
+    "                rnap_locs = np.concatenate((\r\n",
+    "                    np.ones(1,) * (frame_vals['rnap_location'][n_polymerases - 1] - max_length),\r\n",
+    "                    frame_vals['rnap_location'][:n_polymerases],\r\n",
+    "                    np.ones(1,) * (max_length + frame_vals['rnap_location'][0])\r\n",
+    "                ))\r\n",
     "                phi = np.concatenate((\r\n",
     "                    np.ones(1,) * frame_vals['phi'][n_polymerases - 1],\r\n",
     "                    frame_vals['phi'][:n_polymerases],\r\n",
     "                    np.ones(1,) * frame_vals['phi'][0]\r\n",
     "                ))\r\n",
-    "        sigma = np.diff(phi) / np.diff(rnap_locs) / -1.85\r\n",
-    "        if not is_circular:\r\n",
-    "            points = np.array([rnap_locs, np.zeros(rnap_locs.shape)]).T.reshape(-1,1,2)\r\n",
-    "            segments = np.concatenate([points[:-1], points[1:]], axis=1)\r\n",
-    "            main_line.set_segments(segments)\r\n",
-    "            main_line.set_array(sigma)\r\n",
-    "        else:\r\n",
-    "            theta_rnap = to_theta(rnap_locs)\r\n",
-    "            theta_interp = np.linspace(0, max_length, 200)\r\n",
-    "            sigma_interp = np.interp(theta_interp, theta_rnap[:-1], sigma)\r\n",
-    "            points = np.array([theta_interp, np.ones(theta_interp.shape) * 1]).T.reshape(-1,1,2)\r\n",
-    "            segments = np.concatenate([points[:-1], points[1:]], axis=1)\r\n",
-    "            main_line.set_segments(segments)\r\n",
-    "            main_line.set_array(sigma_interp)\r\n",
+    "                sigma = np.diff(phi) / np.diff(rnap_locs) / -1.85\r\n",
     "\r\n",
-    "        if is_circular:\r\n",
-    "            polymerases.set_data(to_theta(rnap_masked), np.ones(rnap_masked.shape))\r\n",
-    "        else:\r\n",
-    "            polymerases.set_data(rnap_masked, np.zeros(rnap_masked.shape))\r\n",
+    "                theta_rnap = to_theta(rnap_locs)\r\n",
+    "                theta_interp = np.linspace(0, max_length, 200)\r\n",
+    "                sigma_interp = np.interp(theta_interp, theta_rnap[:-1], sigma)\r\n",
+    "                points = np.array([theta_interp, np.ones(theta_interp.shape) * 1]).T.reshape(-1,1,2)\r\n",
+    "                segments = np.concatenate([points[:-1], points[1:]], axis=1)\r\n",
+    "                main_line.set_segments(segments)\r\n",
+    "                main_line.set_array(sigma_interp)\r\n",
+    "                polymerases.set_data(theta_rnap[1:-1], np.ones_like(theta_rnap[1:-1]))\r\n",
+    "                mRNA_base = np.array([to_theta(rnap_locs[1:-1]), np.ones(rnap_locs[1:-1].shape)]).T.reshape(-1,1,2)\r\n",
+    "                mRNA_tail = np.array([to_theta(rnap_locs[1:-1]), 1 + (frame_vals['mRNA_length'][:n_polymerases] / max_gene_length)]).T.reshape(-1,1,2)\r\n",
+    "                mRNA_segments = np.concatenate([mRNA_base, mRNA_tail], axis=1)\r\n",
+    "                mRNA_lines.set_segments(mRNA_segments)\r\n",
+    "            else:\r\n",
     "\r\n",
-    "        if not is_circular:\r\n",
-    "            mRNA_base = np.array([rnap_locs[1:  -1], np.zeros(rnap_locs[1:-1].shape)]).T.reshape(-1,1,2)\r\n",
-    "            mRNA_tail = np.array([rnap_locs[1:-1], frame_vals['mRNA_length'][:n_polymerases]]).T.reshape(-1,1,2)\r\n",
-    "        else:\r\n",
-    "            mRNA_base = np.array([to_theta(rnap_locs[1: -1]), np.ones(rnap_locs[1:-1].shape)]).T.reshape(-1,1,2)\r\n",
-    "            mRNA_tail = np.array([to_theta(rnap_locs[1:-1]), 1 + (frame_vals['mRNA_length'][:n_polymerases] / max_gene_length)]).T.reshape(-1,1,2)\r\n",
-    "        #print(mRNA_base)\r\n",
-    "        #print(mRNA_tail)\r\n",
-    "        mRNA_segments = np.concatenate([mRNA_base, mRNA_tail], axis=1)\r\n",
-    "        mRNA_lines.set_segments(mRNA_segments)\r\n",
+    "                rnap_locs = np.concatenate((\r\n",
+    "                    np.zeros(1,),\r\n",
+    "                    frame_vals['rnap_location'][:n_polymerases],\r\n",
+    "                    np.ones(1,) * max_length\r\n",
+    "                ))\r\n",
+    "                phi = np.concatenate((\r\n",
+    "                    np.zeros(1,),\r\n",
+    "                    frame_vals['phi'][:n_polymerases],\r\n",
+    "                    np.zeros(1,)\r\n",
+    "                ))\r\n",
+    "                sigma = np.diff(phi) / np.diff(rnap_locs) / -1.85\r\n",
     "\r\n",
-    "        gene_time_mask = (times < (max_time * i / n_frames))\r\n",
-    "        for i, gene_line in enumerate(gene_lines):\r\n",
-    "            gene_line.set_data(times[gene_time_mask], mRNA_data[i,gene_time_mask])\r\n",
+    "                points = np.array([rnap_locs, np.zeros_like(rnap_locs)]).T.reshape(-1,1,2)\r\n",
+    "                segments = np.concatenate([points[:-1], points[1:]], axis=1)\r\n",
+    "                main_line.set_segments(segments)\r\n",
+    "                main_line.set_array(sigma)\r\n",
+    "                polymerases.set_data(rnap_locs[1:-1], np.zeros_like(rnap_locs[1:-1]))\r\n",
+    "                mRNA_base = np.array([rnap_locs[1:-1], np.zeros(rnap_locs[1:-1].shape)]).T.reshape(-1,1,2)\r\n",
+    "                mRNA_tail = np.array([rnap_locs[1:-1], frame_vals['mRNA_length'][:n_polymerases]]).T.reshape(-1,1,2)\r\n",
+    "                mRNA_segments = np.concatenate([mRNA_base, mRNA_tail], axis=1)\r\n",
+    "                mRNA_lines.set_segments(mRNA_segments)\r\n",
+    "\r\n",
+    "\r\n",
     "            \r\n",
     "        return main_line, polymerases, mRNA_lines, *gene_lines\r\n",
     "    anim = animation.FuncAnimation(fig, animate, init_func=init, frames=n_frames, interval=33, blit=True)\r\n",
     "    anim.save(filename, dpi=300, writer=ffmpeg_writer, progress_callback= lambda i,n: print(f'Saving frame {i} of {n}') if i % 25 == 0 else None)\r\n",
-    "gen_animation(examples, ['#808080', '#A58245'], '../output/test_out.mp4', 20000)"
+    "gen_animation(examples, ['#808080', '#A58245'], '../output/test_out.mp4', 50)"
    ]
   },
   {
@@ -311,7 +327,7 @@
    "hash": "35596c0d4d50b3cf51088ffaabe9a8701552f7de3deccc6f17efae06fe0a22a4"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.4  ('env': venv)",
+   "display_name": "Python 3.9.4 64-bit ('env': venv)",
    "name": "python3"
   },
   "language_info": {
