--- a/notebooks/t2.0_julia_summaries.ipynb
+++ b/notebooks/t2.0_julia_summaries.ipynb
@@ -157,6 +157,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for sc in [1.0, 0.0]:\r\n",
+    "    plot_df = simulation_df.copy()\r\n",
+    "    plot_df = plot_df[(plot_df['topo_rate'] == min(plot_df['topo_rate'])) & (plot_df['is_plasmid'] == 0)  & (plot_df['induction'] < 0.008) & (plot_df['sc_dependent'] == sc)]\r\n",
+    "    #plot_df.groupby(['condition', 'induction']).mean().reset_index()\r\n",
+    "    sns.lineplot(data=plot_df, x='induction', y='mRuby2', hue='condition', palette=main_condition_palette, hue_order=[x for x in plot_order if x.startswith('2_gene')])\r\n",
+    "    plt.gca().legend_.set_bbox_to_anchor((1.7, .9))\r\n",
+    "    plt.savefig('../img/t2.0/sim_compare_{}.svg'.format(sc), bbox_inches='tight')\r\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.set_style('whitegrid')\r\n",
+    "for is_plasmid in [0]:\r\n",
+    "    plot_df = simulation_df.copy()\r\n",
+    "    plot_df = plot_df[(plot_df['topo_rate'] == min(plot_df['topo_rate'])) & (plot_df['is_plasmid'] == is_plasmid) & (plot_df['induction'] < .008) & (plot_df['sc_dependent'] == 0.0)]\r\n",
+    "    plot_df['log mRuby2'] = np.log10(plot_df['mRuby2'] + 1)\r\n",
+    "    plot_df['log eGFP'] = np.log10(plot_df['eGFP'] + 1)\r\n",
+    "\r\n",
+    "    grid = sns.FacetGrid(plot_df, col='induction', row='condition',\r\n",
+    "            row_order=[x for x in plot_order if x.startswith('2_gene')],\r\n",
+    "            margin_titles=True, despine=False)\r\n",
+    "    grid.map(sns.scatterplot,\r\n",
+    "        'log eGFP', 'log mRuby2', color='#303030', alpha=0.4, s=10)\r\n",
+    "    grid.fig.subplots_adjust(wspace=0, hspace=0)\r\n",
+    "    for axis in grid.axes[0]:\r\n",
+    "        dox = float(axis.get_title().split('=')[1].strip())\r\n",
+    "        if dox == 0:\r\n",
+    "            axis.set_title('Uninduced')\r\n",
+    "        else:\r\n",
+    "            axis.set_title('{:.4f}x induction'.format(dox / max(plot_df['induction'])))\r\n",
+    "    # Adjustment from https://cduvallet.github.io/posts/2018/11/facetgrid-ylabel-access\r\n",
+    "    for axis in grid.axes.flat:\r\n",
+    "        if axis.texts:\r\n",
+    "            txt = axis.texts[0]\r\n",
+    "            axis.text(*txt.get_unitless_position(),\r\n",
+    "                    txt.get_text().split('=')[1].strip(),\r\n",
+    "                    transform=axis.transAxes,\r\n",
+    "                    va='center')\r\n",
+    "            axis.texts[0].remove()\r\n",
+    "\r\n",
+    "    for (row_val,col_val), ax in grid.axes_dict.items():\r\n",
+    "        ax.set_facecolor(light_background_palette[row_val])\r\n",
+    "    grid.fig.subplots_adjust(top=0.9)\r\n",
+    "    grid.fig.suptitle('Simulations with {} boundary conditions'.format('circular' if is_plasmid == 1.0 else 'linear'))\r\n",
+    "    plt.savefig('../img/t2.0/sc_independent_plots.png', bbox_inches='tight', dpi=300)\r\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sns.set_style('whitegrid')\r\n",
     "plot_df = simulation_df.copy()\r\n",
     "plot_df = plot_df[(plot_df['condition'] == '2_gene.divergent') & (plot_df['is_plasmid'] == 1.0) & (plot_df['induction'] < .008) & (plot_df['sc_dependent'] == 1.0)]\r\n",
